[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autocov"
dynamic = ["version"]
description = 'AutoCov is a CLI tool for automatic testing and codecoverage'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "prsabahrami", email = "pbahrami@uwaterloo.ca" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "dotenv",
    "groq",
    "coverage",
    "pytest",
    "toml"
]

[project.urls]
Documentation = "https://github.com/prsabahrami/autocov#readme"
Issues = "https://github.com/prsabahrami/autocov/issues"
Source = "https://github.com/prsabahrami/autocov"

[tool.hatch.build.targets.wheel]
include = ["/src"]

[tool.hatch.version]
path = "src/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/autocov tests}"

[tool.coverage.run]
source_pkgs = ["autocov", "tests"]
branch = true
parallel = true
omit = [
  "src/__about__.py",
]

[tool.coverage.paths]
autocov = ["src", "*/autocov/src"]
tests = ["tests", "*/autocov/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
